tests/functional2/lang/err_context/eval-fail.err.exp
error:
       … Hello

       … caused by explicit throw
         at /pwd/in.nix:1:35:
            1| builtins.addErrorContext "Hello" (throw "Foo")
             |                                   ^
            2|

       error: Foo
